--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: php
 php:
   - 5.4
+before_install:
+  php "/home/travis/.phpenv/versions/5.4.23/bin/composer.phar self-update"
 script:
   cd builder
   php "builder.php" -gc
