--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: php
 php:
-  - 5.4
+  - 5.3
 before_install:
-  php composer self-update
+  - php /home/travis/.phpenv/versions/5.3.26/bin/composer.phar self-update
 script:
-  cd builder
-  php "builder.php" -gc
+  - cd builder
+  - php builder.php -gc
