--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ php:
 before_install:
   - php /home/travis/.phpenv/versions/5.3.27/bin/composer.phar self-update
 script:
-  - cd builder
+  cd builder
   - php builder.php -gc
